# Effective_Linearization_2

./: README.md  README_step10.md  pyproject.toml  requirements.txt
data/: README.md  case39.mat
scripts/: 00_check_data.py  01_check_forward.py  02_check_active_set.py  03_check_kkt_gradient.py  04_check_batch_gradient.py  07_train_step7.py  10_train_step10_hybrid.py  11_evaluate_step10.py
softopf/: __init__.py  active_set.py  baseline.py  config.py  critical_region.py  data.py  diagnostics.py  gradient.py  kkt.py  loss_model.py  network.py  objective.py  params.py  pipeline.py  region_quad.py  solution.py  solver_cvxpy.py  solver_osqp.py  template.py  training.py
